objects/Property__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Room__c</fullName>
        <label>Additional Room</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Puja Room</fullName>
                </value>
                <value>
                    <fullName>Maid Room</fullName>
                </value>
                <value>
                    <fullName>Store Room</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bangalore</fullName>
                </value>
                <value>
                    <fullName>Mumbai</fullName>
                </value>
                <value>
                    <fullName>Hyderabad</fullName>
                </value>
                <value>
                    <fullName>Chennai</fullName>
                </value>
                <value>
                    <fullName>Bhubaneshwar</fullName>
                </value>
                <value>
                    <fullName>Pune</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Available_From__c</fullName>
        <label>Available From</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Carpet_Area_sqft__c</fullName>
        <label>Carpet Area(sqft)</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Covered_Area_sqft__c</fullName>
        <label>Covered Area(sqft)</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Electricity_Status__c</fullName>
        <label>Electricity Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facing__c</fullName>
        <label>Facing</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Floor__c</fullName>
        <label>Floor</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>For_Bachelor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>For Bachelor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>For_Family__c</fullName>
        <defaultValue>false</defaultValue>
        <label>For Family</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Furnished_Type__c</fullName>
        <label>Furnished Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fully Furnished</fullName>
                </value>
                <value>
                    <fullName>Semi Furnished</fullName>
                </value>
                <value>
                    <fullName>Unfurnished</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Furnishing_Available__c</fullName>
        <label>Furnishing Available</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Geo_Map__c</fullName>
        <label>Geo Map</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Landmark__c</fullName>
        <label>Landmark</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Maintenance_Charge__c</fullName>
        <label>Maintenance Charge</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_of_Balcony__c</fullName>
        <label>Number of Balcony</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Bathrooms__c</fullName>
        <label>Number of Bathrooms</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Bedrooms__c</fullName>
        <label>Number of Bedrooms</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Property_Description__c</fullName>
        <label>Property Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Property_Main_Image__c</fullName>
        <label>Property Main Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Property_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property Owner</label>
        <referenceTo>Property_Owner__c</referenceTo>
        <relationshipLabel>Properties</relationshipLabel>
        <relationshipName>Properties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_Video_URL__c</fullName>
        <label>Property Video URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Rent__c</fullName>
        <label>Rent</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Security_Deposit__c</fullName>
        <label>Security Deposit</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                </value>
                <value>
                    <fullName>Leased</fullName>
                </value>
                <value>
                    <fullName>Rented</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Water_Availability__c</fullName>
        <label>Water Availability</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Property</label>
    <nameField>
        <displayFormat>PL-{0000}</displayFormat>
        <label>Property Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Properties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>